--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -4,11 +4,20 @@ output:
   html_document:
     keep_md: true
 ---
-#### Christian Willig
-#### August 2015
+Christian Willig  
+August 2015
 
 ## Loading and preprocessing the data
+In order to process the data I downloaded the file and load the data into a dataframe `data`.
+```{r}
+temp <- tempfile()
+urlfile <- "http://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
+download.file(urlfile,temp, mode="wb")
+unzip(temp)
+unlink(temp)
 
+data <- read.csv("activity.csv")
+```
 
 
 ## What is mean total number of steps taken per day?
