--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -36,8 +36,11 @@ For this part of the assignment, you can ignore the missing values in the datase
 per day  
 
 ```{r}
+#ignoring missing values
+data_df2 <- na.omit(data)
+
 #Calculate total steps during a day
-total_steps_day <- aggregate(steps ~ date, data, sum)
+total_steps_day <- aggregate(steps ~ date, data_df2, sum)
 
 #Draw histogram with the total steps during a day
 hist(total_steps_day$steps, main = paste("Total Steps per Day"), col="blue", xlab="Number of Steps")
@@ -52,8 +55,24 @@ The `mean` of total number of steps per day is `r format(mean_steps_per_day, sci
 The `median` of total number of steps per day is `r format(median_steps_per_day, sciencific = T)`
 
 ## What is the average daily activity pattern?
+1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis)
+and the average number of steps taken, averaged across all days (y-axis)  
 
+```{r}
+steps_by_interval <- aggregate(steps ~ interval, data_df2, mean)
 
+plot(steps_by_interval$interval,steps_by_interval$steps, type="l", xlab="Interval", ylab="Number of Steps",main="Avg Number of Steps per Day by Interval")
+
+```
+
+2. Which 5-minute interval, on average across all the days in the dataset,
+contains the maximum number of steps?  
+
+```{r}
+max_number_of_steps <- steps_by_interval[which.max(steps_by_interval$steps),1]
+
+```
+The 5-minute interval that contains the maximum number of steps is `r format(max_number_of_steps, sciencific = T)`
 
 ## Imputing missing values
 
